server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-ruo-app
spec:
  selector:
    matchLabels:
      app: server-ruo
  replicas: 1 
  template:
    metadata:
      labels:
        app: server-ruo
    spec:    
      restartPolicy: Always
      containers:
      - name: server-container
        image: nsiid2019/treciserver:v1
        ports:
        - containerPort: 80
        - containerPort: 443
