etcd-service.yml
apiVersion: v1
kind: Service
metadata:
  name: etcd-node1
  namespace: kube-system
spec:
  ports:
  - port: 80
    targetPort: 2379
    protocol: TCP
  selector:
    app: etcd-node1
    namespace: kube-system
