ingressTest.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
   rules:
   - host: testing.com
     http:
       paths:
       - path: /rgb
         backend:
           serviceName: bsa-server-service
           servicePort: 8080
